--- a/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
+++ b/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdX2yokT9vSjsa+meCI5ZZ",
+      "authorship_tag": "ABX9TyMNFVMx0240HoZOCQmczG2P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,7 +98,7 @@
         "id": "lcGf9VMbkX_N",
         "outputId": "e61c45e0-cece-4086-a494-7f8ea2aadba8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,6 +182,78 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# ***Tokenizing***"
+      ],
+      "metadata": {
+        "id": "q7Ep1hC8qdDH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "\n",
+        "string = 'I love you John snow and you know nothing'\n",
+        "\n",
+        "token = nltk.word_tokenize(string)\n",
+        "token"
+      ],
+      "metadata": {
+        "id": "FacB2TJ2qtu9",
+        "outputId": "9a2b6715-eedc-4365-f4a0-6539d59ca09b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['I', 'love', 'you', 'John', 'snow', 'and', 'you', 'know', 'nothing']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "lem_string = ' '.join([lemma.lemmatize(x) for x in token])\n",
+        "lem_string"
+      ],
+      "metadata": {
+        "id": "bikPDTvbq9fQ",
+        "outputId": "da04668d-eab7-4b8e-afcf-bd6b1a5ee651",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'I love you John snow and you know nothing'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# ***Stemming and Lemmatization*** "
       ],
       "metadata": {
@@ -220,9 +292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9m_AhkEsgXa",
-        "outputId": "2b1ea7e9-b043-4921-de84-4f6750015a9f"
+        "outputId": "400fe76b-1331-46fc-d9cc-06b43285cc8e"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,10 +322,29 @@
         "    print(x+'--->'+lemma.lemmatize(x))"
       ],
       "metadata": {
-        "id": "TQtKHIJNsqIC"
+        "id": "TQtKHIJNsqIC",
+        "outputId": "566c4181-9cd1-45e8-a573-925db128ba05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "walk--->walk\n",
+            "walking--->walking\n",
+            "walks--->walk\n",
+            "walked--->walked\n",
+            "ran--->ran\n",
+            "run--->run\n",
+            "runs--->run\n",
+            "running--->running\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
