--- a/data-cleaning-practice/data cleaning with visualization.ipynb
+++ b/data-cleaning-practice/data cleaning with visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "id": "1d705602-baca-48ae-a89f-f24943581760",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "id": "fc372ba0-06ef-44f6-9a4e-0fab41276678",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4     Chrysler  1995-10-28  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4772f25",
+   "id": "6fbb2da4",
    "metadata": {},
    "source": [
     "### Null values Visualize"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "id": "3458b383",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "631a873d",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "<AxesSubplot: xlabel='index'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e22c42c",
+   "id": "f44bb76d",
    "metadata": {},
    "source": [
     "### Percentage of nan values in cols"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "a5a18368",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
+   "id": "9fcb16cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of Missing Values:---\n",
+      "full name: 0%\n",
+      "address: 0%\n",
+      "country: 5%\n",
+      "job: 6%\n",
+      "company: 6%\n",
+      "balance: 10%\n",
+      "vehicle: 4%\n",
+      "birthday: 0%\n",
+      "country_ismissing: 0%\n",
+      "job_ismissing: 0%\n",
+      "company_ismissing: 0%\n",
+      "balance_ismissing: 0%\n",
+      "vehicle_ismissing: 0%\n",
+      "num_missing: 0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2nd \n",
+    "\n",
+    "print('Amount of Missing Values:---')\n",
+    "for col in df.columns:\n",
+    "    percentage = np.mean(df[col].isna())\n",
+    "    print(f'{col}: {round(percentage*100)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "ae917ab8-a398-4e83-acaa-76891581ea85",
    "metadata": {},
    "outputs": [
@@ -317,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "id": "dda7b724",
    "metadata": {},
    "outputs": [
@@ -342,14 +379,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58687d3",
+   "id": "9cec3a7b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "aec3dd73",
+   "id": "446ce23f",
    "metadata": {},
    "source": [
     "#### So as we can see, there are no numeric columns in our dataset so far. \n",
@@ -375,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "id": "1e12a770",
    "metadata": {},
    "outputs": [
@@ -387,7 +424,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "id": "ea3a0d34",
    "metadata": {},
    "outputs": [
@@ -461,7 +498,7 @@
        "0  1999-02-09  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "7497c1e0",
    "metadata": {},
    "outputs": [
@@ -486,7 +523,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "ec2a9899",
    "metadata": {},
    "outputs": [
@@ -512,7 +549,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "4a45957b",
    "metadata": {},
    "outputs": [
@@ -536,7 +573,7 @@
        "5318.26"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "id": "464058bc",
    "metadata": {},
    "outputs": [],
@@ -560,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "id": "477295d7",
    "metadata": {},
    "outputs": [
@@ -570,7 +607,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "id": "be2fe9f7",
    "metadata": {},
    "outputs": [],
@@ -604,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "id": "fda40acf",
    "metadata": {},
    "outputs": [
@@ -722,7 +759,7 @@
        "198          Volvo  1994-12-30  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "id": "850dde4a",
    "metadata": {},
    "outputs": [
@@ -758,7 +795,7 @@
        "Name: vehicle, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "4e488acb",
    "metadata": {},
    "outputs": [
@@ -838,7 +875,7 @@
        "Lamborghini  104506"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "id": "f2ce225c",
    "metadata": {},
    "outputs": [
@@ -938,7 +975,7 @@
        "Volvo           9930.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
